# fastapi_boilerplate

./: Dockerfile  README.md  docker-compose.yml  env.credentials  pyproject.toml
.docs/: INSTALL.md
