[tool.stela]
default_environment = "local"
environment_variable_name = "ENV"
show_logs = false
use_environment_layers = true

[environment]
project.name = "main_app"
project.secret_key = "foo"
project.debug = true
project.allow_all_origins = false
project.allowed_hosts = ["*"]
project.show_debug_toolbar = true
project.show_django_pages = true

[environment.local]
project.allow_all_origins = true
project.debug = true
project.log_level = "DEBUG"

[environment.dev]
project.allow_all_origins = false

[environment.stg]
project.allow_all_origins = false

[environment.prd]
project.allow_all_origins = false

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
    | dependencies
  )/
)
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.semantic_release]
branch = "main"
build_command = "python -m pip install -U poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "core/__init__.py:__version__",
  "pyproject.toml:version",
]


[tool.poetry]
name = "side_project"
version = "0.1.0"
description = ""
authors = ["Alceu-wv <alceu.wv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
psycopg2 = "^2.9.3"
loguru = "*"
gunicorn = "*"
arrow = "*"
boto3 = "*"
stela = "^4.0.2"
stringcase = "^1.2.0"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
pytest-black = "*"
pytest-coverage = "*"
pytest-django = "*"
pytest-mock = "^3.6.1"
pytest-pylint = "*"
requests-mock = "*"
Faker = "*"
black = "*"
factory-boy = "*"
ipython = "*"
isort = "*"
mock = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
